fixing spacing issues

--- a/main.scss
+++ b/main.scss
@@ -90,8 +90,8 @@ to {left: 40%;}
     position: relative;
     margin: auto;
 
-    width:500px;
-    height:350px;
+    width:300px;
+    height:340px;
 }
 
 .pic {
