--- a/output.css
+++ b/output.css
@@ -7528,8 +7528,8 @@ body {
 .parent {
   position: relative;
   margin: auto;
-  width: 500px;
-  height: 350px; }
+  width: 300px;
+  height: 340px; }
 
 .pic {
   position: absolute;
